@@ -193,6 +193,8 @@ argument_list|,
 name|bytes
 operator|.
 name|count
+operator|+
+literal|1
 argument_list|,
 literal|true
 argument_list|)
@@ -272,6 +274,8 @@ argument_list|,
 name|entry
 operator|.
 name|count
+operator|+
+literal|1
 argument_list|,
 literal|true
 argument_list|)
