@@ -2773,6 +2773,8 @@ argument_list|,
 name|bytes
 operator|.
 name|count
+operator|+
+literal|1
 argument_list|,
 literal|false
 argument_list|)
@@ -2892,22 +2894,12 @@ name|bytes
 operator|.
 name|offset
 operator|+
-operator|(
-name|id
-operator|==
-literal|0
-condition|?
-literal|0
-else|:
 name|addresses
 operator|.
 name|get
 argument_list|(
 name|id
-operator|-
-literal|1
 argument_list|)
-operator|)
 decl_stmt|;
 name|long
 name|endAddress
@@ -2921,6 +2913,8 @@ operator|.
 name|get
 argument_list|(
 name|id
+operator|+
+literal|1
 argument_list|)
 decl_stmt|;
 name|int
@@ -3469,6 +3463,8 @@ argument_list|,
 name|entry
 operator|.
 name|count
+operator|+
+literal|1
 argument_list|,
 literal|false
 argument_list|)
@@ -3718,22 +3714,12 @@ name|startOffset
 operator|=
 name|offset
 operator|=
-operator|(
-name|docID
-operator|==
-literal|0
-condition|?
-literal|0
-else|:
 name|ordIndex
 operator|.
 name|get
 argument_list|(
 name|docID
-operator|-
-literal|1
 argument_list|)
-operator|)
 expr_stmt|;
 name|endOffset
 operator|=
@@ -3742,6 +3728,8 @@ operator|.
 name|get
 argument_list|(
 name|docID
+operator|+
+literal|1L
 argument_list|)
 expr_stmt|;
 block|}
